--- a/lab1/login.html
+++ b/lab1/login.html
@@ -28,6 +28,7 @@
         <td ><a href="Registration.html"><button type="button">Login</button></a></td>
         <td><a href="forgatepass.html"><button type="button">Forget Password?</button></a></td>
         <td><a href="home.html"><button type="button">Back</button></a></td>
+        <td ><a href="createRecords.html"><button type="button">Next</button></a></td>
         
     </tr>
 </tr>
